--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body{
     background-color: red;
 }
 .maincard{
-    margin-top: 30px;
+    margin-top: 20px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -68,7 +68,7 @@ body{
          /* width: 200px; */
         align-items: center !important;
         text-align: center !important;
-        margin-left: 30px !important;
+        margin: 10px !important;
 
         
     }
@@ -81,7 +81,7 @@ body{
         /* width: 200px; */
         align-items: center !important;
         text-align: center !important;
-        margin-left: 30px !important;
+        margin: 10px !important;
     }
 }
 
